--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                               <div class="button" onclick="pinKey('3')">3</div>
                             </div>
                             <div class="calc-button-row">
-                                <div class="button" onclick="backSpeech()"><</div>
+                                <div class="button otherBtn" onclick="backSpeech()"><</div>
                                 <div class="button" onclick="pinKey('0')">0</div>
-                                <div class="button" onclick="clearAll()">C</div>
+                                <div class="button otherBtn" onclick="clearAll()">C</div>
                             </div>
                             <div>
                                 <button type="submit"  class="submit-btn" id="submitBtn">Submit</button>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="notify-section">
-            <p class="notify " id="pin-not-match">❌ Pin Didn't Match, Please try again</p>
+            <p class="notify " id="pin-not-match">❎ Pin Didn't Match, Please try again</p>
             <p class="notify " id="pin-match">✔️ Pin Matched... Secret door is opening for you</p>
         </div>
     </div>
