--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="notify-section">
-            <p class="notify " id="pin-not-match">❎ Pin Didn't Match, Please try again</p>
+            <p class="notify " id="pin-not-match">❌ Pin Didn't Match, Please try again</p>
             <p class="notify " id="pin-match">✔️ Pin Matched... Secret door is opening for you</p>
         </div>
     </div>
